package Adapter.Extend.Package;

public interface Print {
  public abstract void printWeak();
  public abstract void printString();
}
